--- a/yaml/names1_namespaces.yml
+++ b/yaml/names1_namespaces.yml
@@ -1,6 +1,6 @@
 apiVersion: v1  
 kind: Namespace  
 metadata:  
-   name: cbppro-test
+   name: names1
    labels:  
-     name: cbppro-test
+     name: names1
