--- a/yaml/limitrange.yaml
+++ b/yaml/limitrange.yaml
@@ -20,7 +20,7 @@ spec:
       cpu: 1000m #如果创建pod的时候没有设置最大使用多大cpu，则设置这里设置的值，这里我们设置的1000m，也就是1个cpu的百分之百。这个值必须不能大于上面limits里面 max的值，也就是不能大于最大值否则会报错。
       memory: 200Mi #设置默认的最大可用内存，200Mi代表最大可用200MiB内存。
     defaultRequest: #设置默认的request
-      cpu: 100m #设置默认最低需求cpu100m。
+      cpu: 200m #设置默认最低需求cpu100m，这个值必须不能低于上面设置的最低cpu的大小。
       memory: 100Mi #设置默认最低需求100Mi的内存。
     max:
       cpu: "2"
