--- a/yaml/limitrange.yaml
+++ b/yaml/limitrange.yaml
@@ -5,12 +5,6 @@ metadata: #基本信息
   namespace: names1 #在那个namespace创建。
 spec: #下面指定各种参数配置
   limits: #这里设置要限制的值。
-#  - #default:  # 如果创建pod的时候没有设置资源限制，则使用下面的资源限制的配置。
-     # cpu: 1000m #如果创建pod的时候没有设置最大使用多大cpu，则设置这里设置的值，这里我们设置的1000m，也就是1个cpu的百分之百。这个值必须不能大于上面limits里面 max的值，也就是不能大于最大值否则会报错。
-      #memory: 200Mi #设置默认的最大可用内存，200Mi代表最大可用200MiB内存。
-    #defaultRequest: #设置默认的request
-    #  cpu: 200m #设置默认最低需求cpu100m，这个值必须不能低于上面设置的最低cpu的大小。
-     # memory: 100Mi #设置默认最低需求100Mi的内存。
   - max: #设置最大值
       cpu: "1" #这个namespace里的pod，单个pod最大不能使用超过1G的内存。
       memory: 300Mi #单个pod多不能使用超过300MiB的内存。
@@ -28,13 +22,13 @@ spec: #下面指定各种参数配置
     defaultRequest: #设置默认的request
       cpu: 200m #设置默认最低需求cpu100m，这个值必须不能低于上面设置的最低cpu的大小。
       memory: 100Mi #设置默认最低需求100Mi的内存。
-    max: #设置最大值
+    max: #为容器设置最大值
       cpu: "2"
       memory: 1Gi
-    min: #设置最小值
+    min: #为容器资源设置最小值
       cpu: 200m
       memory: 16Mi
-    maxLimitRequestRatio: #最大与最小的比例
-      cpu: 3
+    maxLimitRequestRatio: #设置容器要使用的资源最大与最小的比例，如果超过下面设置的值，不允许创建。
+      cpu: 5
       memory: 2
     type: Container #为谁设置，这里表示上面这一阶段的内容都是为Container设置。
