--- a/yaml/limitrange.yaml
+++ b/yaml/limitrange.yaml
@@ -12,7 +12,7 @@ spec: #下面指定各种参数配置
       cpu: 200m #设置最小为其准备200m的cpu资源
       memory: 16Mi #设置最小为准备16Mi的内存资源。
     maxLimitRequestRatio: #request的值和最大值的比例，超过下面设置的比例就不能允许创建。比如，如果设置了最大cpu是1000m，request是200m，那么这个比例就是5,那么如果这个我们在下面设置的是4，那么pod就无法被创建。
-      cpu: 4 #最小值cpu和最大cpu的比例不能超过这个值。
+      cpu: 5 #最小值cpu和最大cpu的比例不能超过这个值。
       memory: 3 #最小内存和最大内存比例不能超过这个值。
     type: Pod #指定这些限制配置给谁，这里表示配置给pod
 
@@ -28,7 +28,7 @@ spec: #下面指定各种参数配置
     min: #为容器资源设置最小值
       cpu: 200m
       memory: 16Mi
-    maxLimitRequestRatio: #设置容器要使用的资源最大与最小的比例，如果超过下面设置的值，不允许创建。
+    maxLimitRequestRatio: #设置容器要使用的资源最大与最小的比例，如果超过下面设置的值，不允许创建，创建容器时会先判断是否超过了对pod设置的比例值，然后判断这里设置的这个值。
       cpu: 5
       memory: 2
     type: Container #为谁设置，这里表示上面这一阶段的内容都是为Container设置。
