--- a/yaml/limitrange.yaml
+++ b/yaml/limitrange.yaml
@@ -28,7 +28,7 @@ spec: #下面指定各种参数配置
     min: #为容器资源设置最小值
       cpu: 200m
       memory: 16Mi
-    maxLimitRequestRatio: #设置容器要使用的资源最大与最小的比例，如果超过下面设置的值，不允许创建，创建容器时会先判断是否超过了对pod设置的比例值，然后判断这里设置的这个值。
+    maxLimitRequestRatio: #设置容器要使用的资源最大与最小的比例，如果超过下面设置的值，不允许创建，创建容器时会先判断是否超过了对pod设置的比例值，然后判断这里设置的这个对容器的值。
       cpu: 5
       memory: 2
     type: Container #为谁设置，这里表示上面这一阶段的内容都是为Container设置。
