--- a/yaml/2nginx-service.yaml
+++ b/yaml/2nginx-service.yaml
@@ -5,9 +5,10 @@ metadata:
   labels:
     run: alpha-nginx
 spec:
-  type: nodePort
+  type: NodePort
   ports:
   - port: 80
+    targetPort: 8086
     protocol: TCP
   selector:
     run: my-nginx
