--- a/uat/k8s_basic/kube-dashboard-no-rbac.yaml
+++ b/uat/k8s_basic/kube-dashboard-no-rbac.yaml
@@ -55,7 +55,7 @@ spec:
           # Uncomment the following line to manually specify Kubernetes API server Host
           # If not specified, Dashboard will attempt to auto discover the API server and connect
           # to it. Uncomment only if the default does not work.
-        - --apiserver-host=http://uat1:18080
+        - --apiserver-host=http://10.31.68.133:18080
         livenessProbe:
           httpGet:
             path: /
