--- a/uat/common_service/nginx-deploy-svc.yaml
+++ b/uat/common_service/nginx-deploy-svc.yaml
@@ -12,7 +12,7 @@ spec:
     metadata:
       labels:
         run: nginx
-        version: 1.0
+        version: '1.0'
     spec:
       containers:
       - name: nginx
