--- a/uat/elk/logstash2.4.yaml
+++ b/uat/elk/logstash2.4.yaml
@@ -31,6 +31,8 @@ spec:
         - name: PARAMETER2
           value: "/logstash-2.4.1/sendout.conf"
         image: reg.shenmintech.cn/logstash2.4:v1.1
+      imagePullSecrets:
+      - name: regsecret
 #        ports:
 #        - containerPort: 8761
 #          hostPort: 8761
