--- a/u-test/nginx-deployment.yaml
+++ b/u-test/nginx-deployment.yaml
@@ -12,5 +12,6 @@ spec:
       containers:
       - name: my-nginx
         image: nginx
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
