--- a/uat/common_service/nginx-deploy-svc.yaml
+++ b/uat/common_service/nginx-deploy-svc.yaml
@@ -27,6 +27,8 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
+      imagePullSecrets:
+      - name: regsecret
 ---
 apiVersion: v1
 kind: Service
