--- a/yaml/grafana.yaml
+++ b/yaml/grafana.yaml
@@ -11,7 +11,7 @@ spec:
         task: monitoring
         k8s-app: grafana
     spec:
-#      nodeName: u2.shenmin.com
+#      nodeName: k8s2.alv.pub
       containers:
       - name: grafana
         image: gcr.io/google_containers/heapster-grafana-amd64:v4.0.2
